--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   },
   "homepage": "https://github.com/RaghibA/Pokemon-TCG-Tracker#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "chalk": "^4.1.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
+    "pokemontcgsdk": "^2.0.0",
+    "request": "^2.88.2",
     "validator": "^13.6.0"
   }
 }
